--- a/demo/index.html
+++ b/demo/index.html
@@ -24,6 +24,6 @@
     <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
     <!-- Built with love using PWA Starter Kit -->
     <script type="module" src="./dw-multi-value-field-demo.js"></script>
-    <script type="module" src="../node_modules/@dw/dw-form/dw-form.js"></script>
+    <script type="module" src="../node_modules/@dreamworld/dw-form/dw-form.js"></script>
   </body>
 </html>
