fix: update "mwc" components to 0.20.0

--- a/demo/index.html
+++ b/demo/index.html
@@ -17,6 +17,9 @@
       margin-top: 24px;
     }
   </style>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Material+Icons&display=block" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined&display=block" rel="stylesheet">
   <body>
     <dw-multi-value-field-demo label="Multi value field"  min=2 max=10 name="multiValueField"></dw-multi-value-field-demo>
     <dw-button onclick="validate()">validate</dw-button>
