feat: upgrade to latest lit version.
BREAKING CHANGE: https://a.kerika.net/orI/board/VuCl/Zo_8

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,6 +5,9 @@
     <title>Dw multi value field</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Dw multi value field">
+    <script>
+      (window.process = window.process || {}).env = {};
+    </script>
   </head>
   <style>
     body {
